fix($srn): chrome 1px overflow bug

--- a/srn/client/src/index.scss
+++ b/srn/client/src/index.scss
@@ -1,3 +1,7 @@
+html {
+  // prevent ugly scrolls
+  overflow: hidden;
+}
 * {
   user-select: none;
 }
